fix overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -35,7 +35,7 @@
 }
 
 body {
-    overflow: hidden;
+    overflow-x: hidden;
     margin: 0;
     padding: 0;
     text-align: center;
